# MLOps-Health-Insurance-Project

./: .dockerignore  .env_example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.streamlit  README.md  docker-compose.yml  environment.yml  main.py  mlflow-docker-compose.yaml  pyproject.toml  setup_env.sh
.github/workflows/: mlops-ci-workflow.yml
configs/: model_config.yaml
data/processed/: clean_feature_process_ordinal_health_insurance_us_v1.csv
deployment/kubernetes/: fastapi-model-deploy.yaml  fastapi-model-svc.yaml  fastapi-scaledobject.yaml  kustomization.yaml  streamlit-deploy.yaml  streamlit-svc.yaml
deployment/mlflow/: mlflow-docker-compose.yaml
deployment/monitoring/: fastapi-scaledobject.yaml  model-vpa.yaml  predict.json  servicemonitor.yaml
models/trained/: XGBRegressor.pkl  insurance_charges_model_xgbregressor.pkl  preprocessor_ordinal_clean.pkl
notebooks/: 01_data_engineering.ipynb  02_eda.ipynb  03_feature_engineering.ipynb  04_model_experiment_eval.ipynb
src/api/: inference.py  main.py  schemas.py
src/features/: engineer.py
src/models/: train_model.py
streamlit_app/: app.py
