[project]
name = "mlops-health-insurance-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "joblib>=1.3.0",
    "matplotlib>=3.5,<=3.10",
    "mlflow>=3.3.1",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "scikit-optimize>=0.10.2",
    "seaborn>=0.13.2",
    "streamlit>=1.49.0",
    "xgboost>=3.0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
mlops-health-insurance-proj = { workspace = true }

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=8.4.1",
    "jupyterlab>=4.4.6",
    "ydata-profiling>=4.16.1",
    "ipywidgets>=8.1.7",
    "mlops-health-insurance-proj",
]
